--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -24,6 +24,19 @@
     border: none;
 
 }
+.section-title{
+    font-size: 35px;
+    font-weight: bold;
+    color: #181818;
+}
+.section-description{
+    font-size: 20px;
+    font-weight: normal;
+    color: #757575;
+}
+.secondary-bg{
+    background-color: #FFF8F3;
+}
 /* header */
 .header{
     background-image: url(../images/developer.png),url(../images/header_bg.png);
@@ -76,4 +89,32 @@ nav ul a {
 }
 .banner-pp{
     width: 580px;
+}
+/* main styles */
+main{
+    max-width: 1140px;
+    margin: 0 auto;
+}
+/* about styles */
+.about{
+    border-radius: 10px;
+    padding: 130px 150px;
+    text-align: center;
+    margin-top: 130px;
+}
+.about-items{
+    display: flex;
+    justify-content:space-around;
+    justify-items: center;
+    
+}
+.item-description{
+    font-weight: 600;
+    padding: 0;
+    margin: 0;
+   
+}
+.item-title{
+    margin: 0;
+    padding: 0;
 }
