--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -37,6 +37,9 @@
 .secondary-bg{
     background-color: #FFF8F3;
 }
+.text-center{
+    text-align: center;
+}
 /* header */
 .header{
     background-image: url(../images/developer.png),url(../images/header_bg.png);
@@ -96,11 +99,15 @@ main{
     margin: 0 auto;
 }
 /* about styles */
+main section{
+    margin-top: 130px;
+    margin-bottom: 130px;
+}
 .about{
     border-radius: 10px;
     padding: 130px 150px;
     text-align: center;
-    margin-top: 130px;
+  
 }
 .about-items{
     display: flex;
@@ -117,4 +124,15 @@ main{
 .item-title{
     margin: 0;
     padding: 0;
+}
+/* skills section */
+
+.skill-container{
+    display: flex;
+    gap: 24px;
+    }
+.skill{
+    padding: 30px;
+    box-shadow: 0px 6px 50px 0px rgba(0, 0, 0, 0.06);
+    border-radius: 5px;
 }
